0.7.1
=====

Fassembler changes
------------------

* Updated metadata classifiers strings for this package
  [macagua]

* Added the package structure files missing
  [macagua]

* Updated documentation files
  [macagua]

0.7
===

Fassembler changes
------------------

* Added a new `tasks.InstallSpecIfPresent` which checks if the path
  to the requirements spec is present on the filesystem, and does
  nothing if the file does not exist.

* `tasks.VirtualEnv(never_create_virtualenv=True)` no longer runs
  any subtasks.

* Added a new Task `fassembler.apache.CheckApache` which will check
  the presence a list of required Apache modules.  It must be called
  from a Project that subclasses `fassembler.apache.ApacheMixin`.

Project changes
---------------

* fassembler:topp now installs requirements/fassembler-req.txt into 
  the fassembler virtualenv if that file is present.  This file can
  specify add-on packages that provide additional fassembler projects
  to be used in the rest of the build.

  This action was previously done by the `rebuild-opencore-site` script
  in `opencore-fassembler_boot` and is being moved here for better
  encapsulation of builds.  (A build *should* be able to be run entirely
  from fassembler; opencore-fassembler_boot should just be a convenience
  package that wraps fassembler's more arcane knowledge.)

* Various configuration changes in fassembler:buildmaster and buildslave.

* fassembler:wordpress now checks for the presence of its required Apache
  modules, including the Apache PHP module.

* Bake in pinned requirements for opencore's i18ndude sub-project.

0.6
===

Fassembler changes
------------------

* Fassembler has hardcoded expectations that the user's $LANG is
  English -- Maker._get_repo_url parses an error message from
  Subversion with the assumption that it is in English. This manifests
  when running fassembler:topp while it runs `svn info` on the etc
  directory in a new build, which will exist as an unversioned